--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,16 @@
 }
 
 .nav_item {
-  color: white;
   text-decoration: none;
   font-size: 18px;
   margin-left: 50px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.nav_item.white {
+  color: white;
+}
+.nav_item.black {
+  color: black;
 }
 .nav_item:hover {
   color: lightgray;
@@ -83,6 +88,7 @@
 }
 
 
+
 .about_page {
   overflow: hidden;
   position: relative;
@@ -125,4 +131,45 @@
   font-size: 18px;
   text-align: justify;
   line-height: 32px;
+}
+
+.exp_page {
+  text-align: center;
+  padding-top: 225px;
+}
+
+.work_title {
+  font-size: 38px;
+  font-family: monospace;
+
+}
+
+.indicative_box {
+  background-color: #22223B;
+  width: 84%;
+  height: 400px;
+  margin: auto;
+}
+
+.rotation_box {
+  background-color: #93BBE4;
+  width: 42%;
+  height: 400px;
+  
+  display: inline-block; 
+  vertical-align: top;
+}
+
+.gwc_box {
+  background-color: #bababa;
+  width: 42%;
+  height: 400px;
+  
+  display: inline-block; 
+  vertical-align: top;
+}
+
+.row_two {
+  text-align: center;
+  margin-bottom: 50px;
 }
