--- a/src/App.css
+++ b/src/App.css
@@ -313,12 +313,12 @@ a {
   text-decoration: none;
   color: black;
 
-  opacity: 0%;
+  opacity: 0.0;
   transform: translateX(-100px);
   transition: 0.6s cubic-bezier(0.34, 1.56, 0.64, 2.7);
 }
 .icon_group:hover .icon_words {
-  opacity: 100%;
+  opacity: 1.0;
   transform: translateX(0px);
 }
 .icon_group:hover .icon_img {
