--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ a {
   padding-top: 60px;
   transform: rotate(-6deg);
   font-size: 34px;
-  color: #555555;
+  color: #22223B;
 }
 
 .about_text {
@@ -137,6 +137,8 @@ a {
 }
 
 .work_title {
+  color: #f1f1f1;
+  text-shadow: 0px 4px 6px rgb(0 0 0 / 43%);
   font-size: 57px;
   transform: translate(-20%, 13px);
 }
